--- a/templatemo_352_station_shop/products.html
+++ b/templatemo_352_station_shop/products.html
@@ -54,7 +54,7 @@ ddsmoothmenu.init({
 	<div id="templatemo_header">
     	
     	<div id="site_title">
-        	<h1><a href="http://www.templatemo.com">Free CSS Templates</a></h1>
+        	<h1><a href="http://www.templatemo.com">E commerce</a></h1>
         </div>
         
         <div id="header_right">
